# fahrplangenerator

./: .gitignore  .python-version  Makefile  README.md  api.py  build.spec  build_location_cache.py  fahrplan.py  fahrplangenerator.code-workspace  map.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: release-on-version-bump.yml
frontend/: index.html  route.html
frontend/css/: style.css
frontend/js/: app.js
modules/: compute.py  datatypes.py  db.py  logger.py  map.py  utils.py  xyz_basemap.py
src/fahrplangenerator/: api.py  main.py
src/fahrplangenerator/modules/: compute.py  datatypes.py  db.py  logger.py  map.py  utils.py  xyz_basemap.py
src/frontend/: index.html
src/frontend/js/: app.js
