[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools>=61", "wheel"]

[project]
    description     = "Generate Timetable for any Station/Stop with GTFS data"
    name            = "fahrplangenerator"
    readme          = "README.md"
    requires-python = ">=3.12"
    version         = "1.0.0"

    license = "AGPL-3.0-or-later"

    authors = [{ name = "Flo Greistorfer" }]

    dependencies = [
        "Pillow~=12.1.1",
        "Requests~=2.34.2",
        "Shapely~=2.1.2",
        "adjustText~=1.3.0",
        "aiohttp~=3.13.3",
        "aiosqlite~=0.22.1",
        "fastapi~=0.128.7",
        "geopandas~=1.1.2",
        "geopy~=2.4.1",
        "matplotlib~=3.10.8",
        "numpy~=2.4.2",
        "pandas~=3.0.0",
        "pydantic~=2.12.5",
        "pypdf~=6.7.0",
        "pyproj~=3.7.2",
        "python_json_logger~=3.2.1",
        "python_multipart~=0.0.21",
        "questionary~=2.1.1",
        "reportlab~=4.2.5",
        "rich_argparse~=1.7.2",
        "svglib~=1.5.1",
        "tqdm~=4.67.1",
        "uvicorn~=0.40.0",
        "xyzservices~=2025.10.0",
    ]

    [project.scripts]
        fahrplangenerator-cli = "fahrplangenerator.main:main"
        fahrplangenerator-api = "fahrplangenerator.api:main"

[dependency-groups]
    dev = ["deptry", "pyinstaller", "ruff"]

[tool.setuptools.packages.find]
    where = ["src"]

[tool.setuptools.package-data]
    fahrplangenerator = []

[tool.ruff]
    line-length    = 180
    target-version = "py312"

    [tool.ruff.lint]
        ignore = ["E501"]
        select = ["B", "E", "F", "I", "UP"]

    [tool.ruff.format]
        indent-style = "space"
        quote-style  = "double"
